--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-timeit": "^1.2.12",
     "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.4"
   },
